[build-system]
requires = [
    "setuptools",
    "packaging",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers  --benchmark-disable"
testpaths = [
    "tests",
]
filterwarnings = [
"error",
"ignore::UserWarning",
'ignore: the imp module is deprecated :DeprecationWarning',
			]
