[build-system]
requires = [
    "setuptools",
    "packaging",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers  --benchmark-skip"
testpaths = [
    "tests",
]
filterwarnings = [
"error",
'ignore: the imp module is deprecated :DeprecationWarning',
			]
